<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtView_1"
        android:textColor="@color/Botones"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_1"
        app:layout_constraintVertical_bias="0.006"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_search"
            android:layout_marginBottom="16sp"
            app:iconPadding="16dp" />

        <Button
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_report"
            android:layout_marginBottom="16sp"
            app:iconPadding="16dp" />

        <Button
            android:id="@+id/btn_act_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_act_bd"
            android:layout_marginBottom="16sp"
            app:iconPadding="16dp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_add"
            android:layout_marginBottom="16sp"
            app:iconPadding="16dp" />

        <Button
            android:id="@+id/btn_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_inventory"
            android:layout_marginBottom="16sp"
            app:iconPadding="32dp" />

        <Button
            android:id="@+id/btn_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_extra"
            android:layout_marginBottom="16sp"
            app:iconPadding="32dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
