<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainReporteActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="319dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/Botones"
            android:text="@string/textView3" />

        <Button
            android:id="@+id/btn_zona_reporte1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128sp"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_zona_reporte1" />

        <Button
            android:id="@+id/btn_zona_reporte2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:backgroundTint="@color/Botones"
            android:text="@string/btn_zona_reporte2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>