<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".BuscarActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_busqueda_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_busqueda_title"
                android:textColor="@color/Botones"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="gone">

                <EditText
                    android:id="@+id/et_search_product"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Letras"
                    android:hint="@string/et_search_product"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/Botones"
                    android:textColorHint="@color/Botones" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16sp"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_next"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_filter"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="#C75B7A" />

                <Button
                    android:id="@+id/btn_buscar_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_buscar_categoria" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_product_list"
                        android:layout_marginStart="16sp"
                        android:layout_width="400sp"
                        android:layout_height="600sp"
                        tools:listitem="@layout/item_product">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_buscar_reportar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Botones"
                    android:layout_weight="0.5"
                    android:text="@string/btn_buscar_reportar" />

                <Button
                    android:id="@+id/btn_buscar_checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Botones"
                    android:layout_weight="0.5"
                    android:text="@string/btn_buscar_checkin" />

                <Button
                    android:id="@+id/actualizar_Lista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Actualizar"
                    android:visibility="gone"
                    app:icon="@android:drawable/ic_popup_sync"
                    tools:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>