<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AuthenticationActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="412dp"
        android:layout_height="217dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:background="@color/Botones"
            android:fontFamily="casual"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/textView1"
            android:textAlignment="center"
            android:textColor="@color/otros"
            android:textSize="32sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="459dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingresa tu Correo Electronico Asignado:"
                android:textColor="@color/Letras"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:ems="10"
                android:hint="@string/editTextEmailAddress"
                android:inputType="textEmailAddress"
                android:paddingLeft="24sp"
                android:textColor="@color/Botones"
                android:textColorHint="@color/Letras"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingresa tu Contraseña Personal:"
                android:textColor="@color/Letras"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:ems="10"
                android:hint="@string/editTextPassword"
                android:inputType="textPassword"
                android:paddingLeft="24sp"
                android:textColor="@color/Botones"
                android:textColorHint="@color/Letras"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ingresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="8sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_ingresar" />

                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="8sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_registrar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>