<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Act_BD_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_act_BaseD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_act_BaseD"
                android:textColor="#821131"
                android:textSize="40sp" />

            <SearchView
                android:id="@+id/search_view_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="Buscar producto..."
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_filter"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="#C75B7A" />

                <Button
                    android:id="@+id/btn_buscar_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_buscar_categoria" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_list"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:padding="8dp" >

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_stock_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_bd_question"
                android:textColor="#821131"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_stock_quantity"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="#C75B7A"
                android:hint="Cantidad en stock"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="#821131"
                android:textColorHint="#821131" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    app:backgroundTint="@color/Botones"
                    app:tint="@color/white"
                    app:srcCompat="@drawable/baseline_exposure_neg_1_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:backgroundTint="@color/Botones"
                    app:tint="@color/white"
                    app:srcCompat="@drawable/baseline_exposure_plus_1_24" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_modificar"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_modificar"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_update"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/Botones"
                    android:text="@string/btn_delete"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn_cambiar_estado"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/Botones"
                    android:text="Cambiar Estado"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>